# CoffeShine

./: README.md
AdminClient/DesktopAdminClientForCoffeeShine/: DesktopAdminClientForCoffeeShine.pro  icons.qrc  images.qrc  main.cpp  widget.cpp  widget.h
AdminClient/DesktopAdminClientForCoffeeShine/include/QCustomScrollArea/: QCustomScrollArea.cpp  QCustomScrollArea.h
AdminClient/DesktopAdminClientForCoffeeShine/include/QDbTabWidget/: commondbtabtypes.h  qdbtabwidget.cpp  qdbtabwidget.h
AdminClient/DesktopAdminClientForCoffeeShine/include/QDesktopClientLoader/: qdesktopclientloader.cpp  qdesktopclientloader.h
AdminClient/DesktopAdminClientForCoffeeShine/include/QHTabWidget/: qhtabbar.cpp  qhtabbar.h  qhtabwidget.cpp  qhtabwidget.h
AdminClient/DesktopAdminClientForCoffeeShine/include/QHostsDialog/: qhostsdialog.cpp  qhostsdialog.h
AdminClient/DesktopAdminClientForCoffeeShine/include/QNnFileProcessing/: QNnDbProcessing.cpp  QNnDbProcessing.h  file.cpp  file.h
AdminClient/DesktopAdminClientForCoffeeShine/include/QNnTabWidget/: qnntabwidget.cpp  qnntabwidget.h
AdminClient/DesktopAdminClientForCoffeeShine/include/QStatisticTabWidget/: qstatistictabwidget.cpp  qstatistictabwidget.h
AdminClient/DesktopAdminClientForCoffeeShine/include/QUserAccDialog/: quseraccdialog.cpp  quseraccdialog.h
Common/QDataBaseSettings/: qdatabasesettings.cpp  qdatabasesettings.h
Common/QPlugins/: qclientplugin.cpp  qclientplugin.h  qserverplugin.cpp  qserverplugin.h
Common/QPlugins/QCoffeePlugin/: qcoffeeclientplugin.cpp  qcoffeeclientplugin.h  qcoffeeserverplugin.cpp  qcoffeeserverplugin.h
Common/QPlugins/QCoffeePlugin/QCoffeeCategoryInfo/: qcoffeecategoryinfo.cpp  qcoffeecategoryinfo.h
Common/QPlugins/QCoffeePlugin/QCoffeeDrinkInfo/: qcoffeedrinkinfo.cpp  qcoffeedrinkinfo.h
Common/QPlugins/QCoffeePlugin/QCoffeePictureInfo/: qcoffeepictureinfo.cpp  qcoffeepictureinfo.h
Common/QPlugins/QCoffeePlugin/QCoffeePointSale/: qcoffeepointsale.cpp  qcoffeepointsale.h
Common/QPlugins/QCoffeePlugin/QCoffeePriceInfo/: qcoffeepriceinfo.cpp  qcoffeepriceinfo.h
Common/QPlugins/QCoffeePlugin/QCoffeeReceiptInfo/: qcoffeereceiptinfo.cpp  qcoffeereceiptinfo.h
Common/QPlugins/QCoffeePlugin/QCoffeeShiftInfo/: qcoffeeshiftinfo.cpp  qcoffeeshiftinfo.h
Common/QPlugins/QCoffeePlugin/QCoffeeSoldPositionInfo/: qcoffeesoldpositioninfo.cpp  qcoffeesoldpositioninfo.h
Common/QPlugins/QCoffeePlugin/QCoffeeTypeDrink/: qcoffeetypedrink.cpp  qcoffeetypedrink.h
Common/QPlugins/QCoffeePlugin/QCoffeeUserInfo/: qcoffeeuserinfo.cpp  qcoffeeuserinfo.h
Common/QPlugins/QCoffeePlugin/QCoffeeVolumeDrinkInfo/: qcoffeevolumedrinkinfo.cpp  qcoffeevolumedrinkinfo.h
Common/QPlugins/QCoffeePlugin/QColorConsole/: qcolorconsole.cpp  qcolorconsole.h
Common/QPlugins/QCoffeePlugin/QNnPredictionInfo/: qnnpredictioninfo.cpp  qnnpredictioninfo.h
Common/QSentoLanE/: qsentolane.cpp  qsentolane.h
Common/QSentoLanEDebugWidget/: qsentolanedebugwidget.cpp  qsentolanedebugwidget.h
Common/QUnNetProtokol/: commonunnetworktypes.h  qcrc32.cpp  qcrc32.h  qunaccountinfo.cpp  qunaccountinfo.h  qunaccountmanager.cpp  qunaccountmanager.h  qunclienthandler.cpp  qunclienthandler.h  qundatabasesettings.cpp  qundatabasesettings.h  qundbpacketmanager.cpp  qundbpacketmanager.h  qunnetprotokolclient.cpp  qunnetprotokolclient.h  qunnetprotokolserver.cpp  qunnetprotokolserver.h  qunpacketmanager.cpp  qunpacketmanager.h
Common/QUnNetProtokol/QUnHostsDialog/: qunhostsdialog.cpp  qunhostsdialog.h
Common/QUnNetProtokol/QUnHostsWidget/: qunhostswidget.cpp  qunhostswidget.h
QMLClient/QMLClientForCoffeeShine/: QMLClientForCoffeeShine.pro  images.qrc  interlayerforqml.cpp  interlayerforqml.h  main.cpp  qml.qrc  startapp.cpp
QMLClient/QMLClientForCoffeeShine/DrinkImageProvider/: drinkimageprovider.cpp  drinkimageprovider.h
QMLClient/QMLClientForCoffeeShine/QMLFile/: mainView.qml
QMLClient/QMLClientForCoffeeShine/QMLFile/Delegates/: MyItemForMenu.qml  MyItemForOrderList.qml  MyItemForTabs.qml  (+4 more)
QMLClient/QMLClientForCoffeeShine/android/: AndroidManifest.xml
QMLClient/QMLClientForCoffeeShine/asdasd/: AndroidManifest.xml
QMLClient/QMLClientForCoffeeShine2/: QMLClientForCoffeeShine.pro  interlayerforqml.cpp  interlayerforqml.h  main.qml.autosave  startapp.cpp  startapp.h
QMLClient/QMLClientForCoffeeShine2/DrinkImageProvider/: drinkimageprovider.cpp  drinkimageprovider.h
coffeeShineServer1/coffeeShineServer/: CMakeLists.txt  Dockerfile  widget.cpp  widget.h
coffeeShineServer1/coffeeShineServer/include/: qserverloader.cpp  qserverloader.h  timerthread.cpp  timerthread.h
coffeeShineServer1/coffeeShineServer/include/QNn/: nn.cpp  nn.h
coffeeShineServer1/coffeeShineServer/include/QNnFileProcessing/: QNnDbProcessing.cpp  QNnDbProcessing.h  QNnLocalProcessing.cpp  QNnLocalProcessing.h
coffeeShineServer1/coffeeShineServer/include/QNnFileProcessing/QWeather/: weather.cpp  weather.h
coffeeShineServer1/coffeeShineServer/include/QNnFileProcessing/files/: weather.sex
(+62 files in other folders)
